@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	8.4
-Entered-date:	2008-02-19
+Version:	8.5
+Entered-date:	2008-02-23
 Description:	hdparm - get/set hard disk parameters for Linux IDE drives.
+		v8.5 fix broken --security-* commands (buggy passwd in all prior 8.x versions)
 		v8.4 fix broken --write-sector from v8.3
 		v8.3 use exit(errno) on program completion; fix udma6 display for -i
 		v8.2 fixed sector ops (and other stuff) to work with non-libata IDE driver again
@@ -68,7 +69,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		70K hdparm-8.4.tar.gz
+		70K hdparm-8.5.tar.gz
 		1K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
